# segb-forensic

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
core/: CHANGELOG.md  Cargo.toml
core/examples/: dump_menuitems.rs  dump_structure.rs
core/src/: common.rs  error.rs  lib.rs  menuitem.rs  proto.rs  segb1.rs  segb2.rs
core/src/tests/: mod.rs
core/tests/: real_fixtures.rs  segb_integration.rs
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-reader-analyzer-split.md  0002-byte-layout-from-ccl-segb-reference.md  0003-crate-naming-segb-core-lib-segb.md  0004-paranoid-gatekeeper-forbid-unsafe-fuzzed.md  0005-hand-rolled-crc32-dependency-minimal-core.md  0006-emit-forensicnomicon-findings.md  0007-audit-written-records-only.md  0008-minimal-protobuf-walker-inferred-menuitem-schema.md  0009-low-msrv-floor-distinct-from-dev-pin.md
forensic/: CHANGELOG.md  Cargo.toml  README.md
forensic/src/: lib.rs
forensic/tests/: audit.rs  real_fixtures.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: forensic.rs  menuitem.rs  proto.rs  segb1.rs  segb2.rs
scripts/: capture_and_reconcile_tahoe.sh  diff_vs_ccl_segb.py
supply-chain/: config.toml
tests/data/: README.md
tests/data/biome/: Device.Display.Backlight.tahoe26.v2.segb  Device.Display.TrueTone.v2.segb  Device.Power.LowPowerMode.v1.segb
