[package]
name         = "segb-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
description  = "Panic-free reader for Apple SEGB container files (Biome streams) — decodes SEGB v1 and v2 records with state, timestamps, and raw protobuf payload; includes App.MenuItem protobuf field walker"
keywords     = ["forensics", "macos", "biome", "segb", "dfir"]
categories   = ["parser-implementations", "filesystem"]
exclude      = [".github/", ".pre-commit-config.yaml", "deny.toml", "renovate.json"]

[lib]
name = "segb"

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
